BUtton visibility during loading

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
         <div class="joke">
    <p id="jokeElement"><img class="load" src="loading.gif" alt="loading"></p>
    <button class="btn" id="myButton">One More</button>
+   <div id="more"> </div>
 </div>
         <script src="script.js" async defer></script>
     </body>
